kubectl_deploy/app-tier-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wplearndev
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: wplearndev
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wplearndev
spec:
  selector:
    matchLabels:
      app: wplearndev
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wplearndev
        tier: frontend
    spec:
      containers:
      - name: wordpress
        image: bitnami/wordpress:latest
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /bitnami/wordpress
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
