kubectl_deploy/db-tier-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  labels:
    app: wplearndev
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: wplearndev
    tier: database
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb
  labels:
    app: wplearndev
spec:
  selector:
    matchLabels:
      app: wplearndev
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wplearndev
        tier: database
    spec:
      containers:
      - image: bitnami/mysql:latest
        name: mysqldb
        volumeMounts:
        - name: mysqldb-persistent-storage
          mountPath: /bitnami/mysqldb
      volumes:
      - name: mysqldb-persistent-storage
        persistentVolumeClaim:
          claimName: mysqldb-pv-claim
