kubectl_deploy/wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: poornima-dev
  labels:
    app: wordpress
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
  selector:
    app: wordpress
    tier: frontend
