kubectl_deploy/wp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: poornima-dev
spec:
  tls:
  - hosts:
    - wpapp.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: wpapp.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 8000
